[gd_scene load_steps=12 format=2]

[ext_resource path="res://new_tileset.tres" type="TileSet" id=1]
[ext_resource path="res://GroupManager.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Ladder.gd" type="Script" id=4]
[ext_resource path="res://Door.gd" type="Script" id=6]
[ext_resource path="res://Rewind.gd" type="Script" id=7]
[ext_resource path="res://Assets/Art/Background/Background.png" type="Texture" id=8]
[ext_resource path="res://player.tscn" type="PackedScene" id=9]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.67502, 54.1776 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 30.1824, 64.9644 )

[node name="Node2D" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 956.167, 534.393 )
texture = ExtResource( 8 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 1.5, 1.5 )
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 786450, 0, 0 )

[node name="Coins" type="Node2D" parent="."]
script = ExtResource( 2 )
groupName = "coin"

[node name="Coin" type="StaticBody2D" parent="Coins"]
position = Vector2( 723.13, 673.131 )
scale = Vector2( 0.68, 0.719999 )

[node name="Sprite" type="Sprite" parent="Coins/Coin"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coins/Coin"]
scale = Vector2( 3.29412, 3.33334 )
shape = SubResource( 1 )

[node name="Coin2" type="StaticBody2D" parent="Coins"]
position = Vector2( 1417.07, 676.042 )
scale = Vector2( 0.68, 0.719999 )

[node name="Sprite" type="Sprite" parent="Coins/Coin2"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coins/Coin2"]
scale = Vector2( 3.29412, 3.33334 )
shape = SubResource( 1 )

[node name="Objects" type="Node2D" parent="."]
script = ExtResource( 2 )
groupName = "bodies"

[node name="Ladder" type="Area2D" parent="."]
position = Vector2( 724, 884 )
script = ExtResource( 4 )
maxX = 1400

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder"]
scale = Vector2( 7.36123, 3.17007 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Ladder"]
position = Vector2( 0, 3.05176e-05 )
scale = Vector2( 1, 5.21399 )
texture = ExtResource( 3 )

[node name="Rewind" type="Node2D" parent="Ladder"]
script = ExtResource( 7 )

[node name="Door" type="Area2D" parent="."]
position = Vector2( 1249.52, 997.3 )
script = ExtResource( 6 )
coinsNeeded = 2
sceneToGoTo = "res://ladderscene.tscn"

[node name="Sprite" type="Sprite" parent="Door"]
position = Vector2( 0.560364, 31.8624 )
scale = Vector2( 1.0051, 1.01315 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2( -0.110474, -1.27124 )
scale = Vector2( 1.0051, 1.01315 )
shape = SubResource( 4 )

[node name="PlayerScene" parent="." instance=ExtResource( 9 )]
position = Vector2( 345.098, 964.878 )
[connection signal="body_entered" from="Ladder" to="Ladder" method="_on_Ladder_body_entered"]
[connection signal="body_exited" from="Ladder" to="Ladder" method="_on_Ladder_body_exited"]
[connection signal="body_entered" from="Door" to="Door" method="_on_Door_body_entered"]
